<resources>
    <string name="app_name">LittleChef</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredientDescrip">Ingredient Prep Image</string>
    <string name="Sandwich">Turkey Sandwich</string>
    <string name="Appname">Little Chef</string>
    <string-array name="ingredients">
        <item>2 slices White Bread</item>
        <item>1 tspn mayo</item>
        <item>1 tspn mustard</item>
        <item>1/4 cup lettuce</item>
        <item>sliced turkey</item>
        <item>1 tomato</item>
    </string-array>
    <string name="ingredientsTitle">Ingredients</string>
    <string name="recipe">First, lay two slices of white bread flat. if you wish, toast to preference using a toaster.
        Second, spread the mayonnaise on one slice of bread, and then the mustard. this will be your bottom slice.
        Third, slice your tomato with the chefs knife. once done, place the lettuce over the mayo and mustard, followed by the freshly sliced tomato.
        lastly, layer slices of prepackaged turkery over the rest of your ingredients. top it off with the other slice of bread and serve.
    </string>


    /* Text For fragment_add_recipe.xml
    <string name="Recipe_Name_Text">Recipe Name:</string>
    <string name="Recipe_Name_Hint">Ex. Turkey Burgers</string>
    <string name="Prep_Time_Text">Prep. Time:</string>
    <string name="Minutes_Text">minutes</string>
    <string name="Cook_Time_Text">Cook Time:</string>
    <string name="Servings_Text">Servings:</string>
    <string name="Ingredients_Text">Ingredients:</string>
    <string name="Ingredient_Hint">2 Pounds Of Ground Turkey\n1 1/2 Cups Of Fresh Bread Crumbs\n1 Egg\n1/4 Large Onion, Finely Chopped\nSalt and Pepper To Taste\n...</string>
    <string name="Steps_Text">Steps:</string>
    <string name="Steps_Hint">Preheat an outdoor grill for medium-heat and lightly oil the grate.\nCombine turkey, bread crumbs, spinach, onion, egg, salt, and black pepper together in a bowl.\nForm the contents of the bowl into patties.\nCook patties on preheated grill until no longer pink in the center and the juices run clear, 5 to 10 minutes per side.\n</string>
    <string name="Cancel_Text">Cancel</string>
    <string name="Submit_Text">Submit</string>

    <string name="Enter_Recipe_Text">Enter Recipe</string>
    <string name="Url_Recipe_Text">Enter URL </string>

    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirm">Confirm Password</string>
    <string name="Login">Login</string>
    <string name="App_Title">Little Chef</string>
    <string name="Photo_Descrip">App Logo</string>
    <string name="Register">Register</string>
    <string name="Reset">Reset</string>
    <string name="Reg_Frag">New User Registration</string>

</resources>
