<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="179dp"
        android:text="@string/Email" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="270dp"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="168dp"
        android:layout_toEndOf="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:inputType="textEmailAddress"
        android:ems="10" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="259dp"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:inputType="textPassword"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="566dp"
        android:layout_marginEnd="71dp"
        android:layout_marginRight="71dp"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="163dp"
        android:layout_marginLeft="163dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        android:text="@string/App_Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#000000"
        android:textSize="30sp"
        app:fontFamily="@font/condiment" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="84dp"
        app:srcCompat="@drawable/kisspng_chef_s_uniform_hat_royalty_free_vector_chef_hat_5ad9f67427c7b5_449037551524233844163"
        android:contentDescription="@string/Photo_Descrip" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="566dp"
        android:layout_marginEnd="232dp"
        android:layout_marginRight="232dp"
        android:text="@string/Register" />

</RelativeLayout>